Added controller for getting all charts

--- a/ScoreTracker/ScoreTracker.UnitTests/ScoreTracker.UnitTests.csproj
+++ b/ScoreTracker/ScoreTracker.UnitTests/ScoreTracker.UnitTests.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <ProjectReference Include="..\ScoreTracker.Application\ScoreTracker.Application.csproj" />
     <ProjectReference Include="..\ScoreTracker.DataAccess\ScoreTracker.DataAccess.csproj" />
+    <ProjectReference Include="..\ScoreTracker.Web\ScoreTracker.Web.csproj" />
   </ItemGroup>
 
 </Project>
