--- a/ScoreTracker/ScoreTracker.Web/ScoreTracker.Web.csproj
+++ b/ScoreTracker/ScoreTracker.Web/ScoreTracker.Web.csproj
@@ -7,7 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Pages\" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ScoreTracker.Application\ScoreTracker.Application.csproj" />
   </ItemGroup>
 
 </Project>
